--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="Snake.h" />
+    <ClInclude Include="Textbox.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
@@ -124,6 +125,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Snake.cpp" />
+    <ClCompile Include="Textbox.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
