--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -120,6 +120,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="SharedContext.h" />
     <ClInclude Include="StateManager.h" />
+    <ClInclude Include="State_Intro.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +128,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="StateManager.cpp" />
+    <ClCompile Include="State_Intro.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
