--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="State_Intro.h" />
     <ClInclude Include="State_MainMenu.h" />
     <ClInclude Include="State_Paused.h" />
+    <ClInclude Include="Utilities.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
